<resources>
    <string name="app_name">Cloud Chat</string>
    <string name="etEmail">эл. почта</string>
    <string name="etPassword">пароль</string>
    <string name="userAuth">вход</string>
    <string name="userRegister">регистрация</string>
    <string name="first_name">имя</string>
    <string name="second_name">фамилия</string>
    <string name="confirmPassword">подтвердите пароль</string>
    <string name="user_name">логин</string>
    <string name="general_chat">Общий чат</string>
    <string name="private_messages">Личные сообщения</string>
    <string name="all_users">Пользователи</string>
    <string name="input_message">Введите сообщение</string>
    <string name="send_button">Отправить</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>